SRC-17 Client start server -- Rollback  - nothing of all that is needed - client now uses the server engine without starting any spring component